@@ -236,200 +236,18 @@ Comment[zh_CN]=文档已保存
 Comment[zh_TW]=文件已儲存
 Action=None
 
-[Event/LinkActivated]
-Name=Link activated
-Name[bg]=Препратката е активирана
-Name[ca]=Enllaç activat
 Name[ca@valencia]=Enllaç activat
 Name[cs]=Odkaz aktivován
-Name[da]=Link aktiveret
-Name[de]=Verknüpfung aktiviert
-Name[el]=Ο δεσμός ενεργοποιήθηκε
-Name[en_GB]=Link activated
-Name[es]=Enlace activado
-Name[et]=Link aktiveeritud
-Name[fi]=Linkki aktivoitu
-Name[fy]=Keppeling aktivearre
-Name[ga]=Gníomhachtaíodh nasc
-Name[gl]=Enlace activado
-Name[he]=קישור הופעל
-Name[hi]=कड़ी सक्रिय की गई
-Name[hne]=संकली सक्रिय करे गे
-Name[it]=Collegamento attivato
-Name[ja]=リンクがアクティブになりました
-Name[kk]=Сілтеме белсндірілді
-Name[lv]=Saite aktivizēta
-Name[nb]=Lenke skrudd på
-Name[nds]=Link aktiveert
-Name[nl]=Koppeling geactiveerd
-Name[pt]=Ligação activada
-Name[pt_BR]=Ligação ativada
-Name[sv]=Länk aktiverad
-Name[ta]=இணைப்பு தொடங்கிவிட்டது
-Name[tr]=Bağlantı etkinleştirildi
-Name[uk]=Посилання активовано
-Name[wa]=Hårdêye en alaedje
-Name[x-test]=xxLink activatedxx
-Name[zh_CN]=已激活链接
-Name[zh_TW]=連結已啟動
-Comment=A hyperlink was activated
-Comment[bg]=Хипертекстовата препратка е активирана
-Comment[ca]=S'ha activat un hiperenllaç
 Comment[ca@valencia]=S'ha activat un hiperenllaç
-Comment[da]=Et hyperlink blev aktiveret
-Comment[de]=Eine Verknüpfung wurde aktiviert
-Comment[el]=Ένας υπερδεσμός ενεργοποιήθηκε
-Comment[en_GB]=A hyperlink was activated
-Comment[es]=Se ha activado un hiperenlace
-Comment[et]=Aktiveeriti hüperlink
-Comment[fi]=Hyperlinkki aktivoitiin
-Comment[fy]=In keppeling is aktivearre
-Comment[ga]=Gníomhachtaíodh hipearnasc
-Comment[gl]=Activouse un hiperenlace 
-Comment[he]=קישור הופעל
-Comment[hi]=एक हायपरलिंक सक्रिय किया गया
-Comment[hne]=एक हायपरसंकली सक्रिय करिस
-Comment[it]=È stato attivato un collegamento
-Comment[ja]=ハイパーリンクがアクティブになりました
-Comment[kk]=Гиперсілтеме белсендірілген
-Comment[lv]=Hipersaite tika atktivizēta
-Comment[nb]=En hyperlenke ble skrudd på
-Comment[nds]=En Hyperlink wöör aktiveert
-Comment[nl]=Een koppeling is geactiveerd
-Comment[pt]=Foi activada uma hiperligação
-Comment[pt_BR]=Uma hiperligação foi ativada
-Comment[sv]=En hyperlänk aktiverades
-Comment[ta]=உயர் இணைப்பு தொடங்கிவிட்டது
-Comment[tr]=Bir bağlantı etkinleştirildi
-Comment[uk]=Гіперпосилання було активовано
-Comment[wa]=Ene hårdêye a stî metowe en alaedje
-Comment[x-test]=xxA hyperlink was activatedxx
-Comment[zh_CN]=超链接已激活
-Comment[zh_TW]=超連結已啟動
-Action=None
-
-[Event/ParsingError]
-Name=Parsing failed
-Name[bg]=Грешка при обработката
-Name[ca]=Ha fallat l'anàlisi
 Name[ca@valencia]=Ha fallat l'anàlisi
-Name[da]=Fortolkning mislykkedes
-Name[de]=Einlesen fehlgeschlagen
-Name[el]=Αποτυχία ανάλυσης
-Name[en_GB]=Parsing failed
-Name[es]=Fallo al analizar
-Name[et]=Parsimine nurjus
-Name[gl]=Fallou o procesamento
-Name[hne]=पारसिंग फेल
-Name[it]=Elaborazione non riuscita
 Name[ja]=解析失敗
-Name[kk]=Талдау жаңылды
-Name[lv]=Analīze neizdevās
-Name[nb]=Tolking mislyktes
-Name[nds]=Inlesen fehlslaan
-Name[nl]=Ontleden is mislukt
-Name[pt]=O processamento falhou
-Name[pt_BR]=O processamento falhou
-Name[sv]=Tolkning misslyckades
-Name[tr]=Ayrıştırma başarısız oldu
-Name[uk]=Обробка зазнала невдачі
-Name[wa]=L' analijhe del sintake a fwait berwete
-Name[x-test]=xxParsing failedxx
-Name[zh_CN]=分析失败
-Name[zh_TW]=剖析失敗
-Comment=Parsing of a cell's formula failed
-Comment[bg]=Греша при обработката на формулата в клетка
-Comment[ca]=Ha fallat l'anàlisi d'una fórmula de la cel·la
 Comment[ca@valencia]=Ha fallat l'anàlisi d'una fórmula de la cel·la
-Comment[da]=Fortolkning af cellens formel mislykkedes
-Comment[de]=Das Einlesen der Formel einer Zelle ist fehlgeschlagen
-Comment[el]=Αποτυχία ανάλυσης της μαθηματικής σχέσης ενός κελιού
-Comment[en_GB]=Parsing of a cell's formula failed
-Comment[es]=Ha fallado el análisis de la fórmula de una celda
-Comment[et]=Lahtri valemi parsimine nurjus
-Comment[gl]=Fallou a validación dunha formula dunha cela
-Comment[it]=Elaborazione della formula di una cella non riuscita 
 Comment[ja]=セル数式の解析に失敗しました
-Comment[kk]=Ұяшықтағы формула талдауы жаңылды
-Comment[lv]=Neizdevās analizēt šūnas formulu
-Comment[nb]=Det lyktes ikke å tolke innholdet i en celle
-Comment[nds]=Inlesen vun en Zellenformel fehlslaan
-Comment[nl]=Onteleden van een formule in een cel is mislukt 
-Comment[pt]=Falhou o processamento da fórmula de uma célula
-Comment[pt_BR]=O processamento da fórmula de uma célula falhou
-Comment[sv]=Tolkning av en cells formel misslyckades
-Comment[tr]=Hücrelerin formüllerinin ayrıştırılması başarılamadı
-Comment[uk]=Обробка формули комірки завершилась невдачею
-Comment[wa]=L' analijhe del sintake d' ene formule d' ene boesse a fwait berwete
-Comment[x-test]=xxParsing of a cell's formula failedxx
 Comment[zh_CN]=分析单元格的公式失败
-Comment[zh_TW]=剖析儲存格中的公式失敗
-Action=None
-
-[Event/ValidityError]
-Name=Validity failed
-Name[bg]=Грешка при проверката
-Name[ca]=Ha fallat la validació
 Name[ca@valencia]=Ha fallat la validació
-Name[da]=Validering mislykkedes
-Name[de]=Gültigkeitstest fehlgeschlagen
-Name[el]=Ο έλεγχος εγκυρότητας απέτυχε
-Name[en_GB]=Validity failed
-Name[es]=Fallo al validar
-Name[et]=Kontroll nurjus
-Name[fi]=Kelvollisuustarkistus epäonnistui
-Name[fy]=Ferifikaasje is mislearre
-Name[gl]=Fallou Validity
-Name[hi]=वैधता असफल
-Name[hne]=वैधता फेल
-Name[it]=Validazione non riuscita
 Name[ja]=妥当性確認失敗
-Name[kk]=Тексерістен өтпеді
-Name[lv]=Nav derīgs
-Name[nb]=Validering mislyktes
-Name[nds]=Prööv fehlslaan
-Name[nl]=Validatie is mislukt
-Name[pt]=A validação falhou
-Name[pt_BR]=Validação falhou
-Name[sv]=Validering misslyckades
-Name[ta]=இருப்பு நேரம் செயலிழந்தது
-Name[tr]=Geçerlilik doğrulaması başarısız oldu
-Name[uk]=Перевірка зазнала невдачі
-Name[wa]=Li validité a fwait berwete
-Name[x-test]=xxValidity failedxx
 Name[zh_CN]=验证失败
-Name[zh_TW]=正確性檢查失敗
-Comment=Validation for a cell failed
-Comment[bg]=Грешка при проверката на клетка
-Comment[ca]=Ha fallat la validació d'una cel·la
 Comment[ca@valencia]=Ha fallat la validació d'una cel·la
 Comment[cs]=Ověření pro buňku selhalo
-Comment[da]=Validering af en celle mislykkedes
-Comment[de]=Die Überprüfung einer Zelle ist fehlgeschlagen
-Comment[el]=Ο έλεγχος εγκυρότητας ενός κελιού απέτυχε
-Comment[en_GB]=Validation for a cell failed
-Comment[es]=Ha fallado la validación de una celda
-Comment[et]=Lahtri valideerimine nurjus
-Comment[fi]=Solun kelvollisuustarkistus epäonnistui
-Comment[fy]=Ferifikaasje foar in sel mislearre
-Comment[gl]=Fallou Validity nunha cela
-Comment[hi]=एक कक्ष की वैधता असफल
-Comment[hne]=एक कक्छ के वैधता फेल
-Comment[it]=Non è riuscita la validazione di una cella
 Comment[ja]=セルの妥当性確認に失敗しました
-Comment[kk]=Ұяшықтағысы тексерістен өтпей қалды
-Comment[lv]=Šūnas derīguma pārbaude neveiksmīga
-Comment[nb]=Validering for en celle mislyktes
-Comment[nds]=Överpröven för en Zell fehlslaan
-Comment[nl]=Validatie voor een cel is mislukt 
-Comment[pt]=Falhou a validação de uma célula
-Comment[pt_BR]=A validação de uma célula falhou
-Comment[sv]=Validering av en cell misslyckades
-Comment[ta]=செல்லின் இருப்பு நேரம் செயலிழந்தது
-Comment[tr]=Bir hücre için geçerlilik doğrulaması başarısız oldu
-Comment[uk]=Перевірка комірки завершилась невдачею
-Comment[wa]=Li validåcion pos ene boesse a fwait berwete
-Comment[x-test]=xxValidation for a cell failedxx
 Comment[zh_CN]=单元格验证失败
-Comment[zh_TW]=儲存格的正確性檢查失敗
-Action=None
