@@ -6,6 +6,7 @@ Features
 
 Enhancements
 ------------
+Display status bar messages instead of notifications (in a few cases).
 
 Bug Fixes
 ---------
